Render Skybox with Framebuffers

--- a/meson.build
+++ b/meson.build
@@ -74,6 +74,7 @@ deps = [
   dependency('GL', required : true),
   dependency('openal', required : true),
   dependency('assimp', required: true),
+  dependency('fmt', required: true),
   meson.get_compiler('cpp').find_library('dl'),
   meson.get_compiler('cpp').find_library('m'),
 ]
