Refactor Mesh class to be more data efficient

--- a/meson.build
+++ b/meson.build
@@ -41,7 +41,8 @@ srcs = [
   'src/engine/ui/SceneComponent.cpp',
   'src/engine/ui/UIScene.cpp',
   'src/engine/assimp/Model.cpp',
-  'src/engine/Framebuffer.cpp'
+  'src/engine/Framebuffer.cpp',
+  'src/engine/Mesh.cpp',
 ]
 
 imgui = [
