--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "LazyGL"]
 	path = subprojects/LazyGL
-	url = https://github.com/mploux/LazyGL.git
+	url = https://github.com/oyagci/LazyGL.git
