Create a UUID for each entity

--- a/meson.build
+++ b/meson.build
@@ -27,6 +27,7 @@ incdirs += include_directories('thirdparty/ImGuizmo')
 incdirs += include_directories('thirdparty/tinygltf')
 incdirs += include_directories('thirdparty/lua-5.3.5/src')
 incdirs += include_directories('thirdparty/nativefiledialog/src/include')
+incdirs += include_directories('thirdparty/stduuid/include')
 
 srcs = [
   'src/main.cpp',
@@ -151,6 +152,7 @@ if build_machine.system() == 'linux'
 	dependency('xi', required : true),
 	dependency('xrandr', required : true),
 	dependency('gtk+-3.0', required: true),
+	dependency('uuid', required: true),
 	meson.get_compiler('cpp').find_library('freetype'),
   ]
   deps += deps_linux
