--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "thirdparty/nativefiledialog"]
 	path = thirdparty/nativefiledialog
 	url = https://github.com/oyagci/nativefiledialog
+[submodule "subprojects/stduuid"]
+	path = thirdparty/stduuid
+	url = https://github.com/mariusbancila/stduuid.git
+[submodule "thirdparty/stduuid"]
+	path = thirdparty/stduuid
+	url = https://github.com/mariusbancila/stduuid.git
