Replace lazy::graphics::Display by better render context handling to prepare to have multiple backend
This commit adds several utility files to better handle cross platform
compilation and prepare the engine to support multiple backends (such as
OpenGL, Vulkan and D3D11) and platforms (such as Linux, Windows and macOS).

It also starts the replacement of LazyGL by our own backend handling.

--- a/meson.build
+++ b/meson.build
@@ -9,6 +9,8 @@ project('ft_vox', 'cpp',
 	  'werror=false',
 	  'optimization=2'])
 
+add_project_arguments('-DOP4_PLATFORM_LINUX', language: 'cpp')
+
 conf_data = configuration_data()
 conf_data.set('version', 'v0.0.2')
 configure_inc = '.'
@@ -51,6 +53,10 @@ srcs = [
   'src/engine/Mesh.cpp',
   'src/engine/Batch.cpp',
   'src/engine/lualib.cpp',
+
+  'src/engine/core/Window.cpp',
+  'src/engine/platform/opengl/OpenGLContext.cpp',
+  'src/engine/platform/linux/LinuxWindow.cpp',
 ]
 
 imgui = [
