Add Input class and platform specific LinuxInput class to handle keyboard and mouse inputs
Replace the LazyGL input handler by our own which is more suited to
handle cross platform compilation of the engine (e.g. compilation for consoles).

--- a/meson.build
+++ b/meson.build
@@ -55,8 +55,10 @@ srcs = [
   'src/engine/lualib.cpp',
 
   'src/engine/core/Window.cpp',
+  'src/engine/core/Input.cpp',
   'src/engine/platform/opengl/OpenGLContext.cpp',
   'src/engine/platform/linux/LinuxWindow.cpp',
+  'src/engine/platform/linux/LinuxInput.cpp',
 ]
 
 imgui = [
