Add Framebuffer interface to create framebuffers from different APIs
Add OpenGLFramebuffer implementation for OpenGL Framebuffers.
Modify GBuffer class to use Framebuffer interface

--- a/meson.build
+++ b/meson.build
@@ -50,7 +50,6 @@ srcs = [
   'src/engine/ui/UI.cpp',
   'src/engine/ui/SceneComponent.cpp',
   'src/engine/ui/UIScene.cpp',
-  'src/engine/Framebuffer.cpp',
   'src/engine/Mesh.cpp',
   'src/engine/Batch.cpp',
   'src/engine/lualib.cpp',
@@ -65,12 +64,14 @@ srcs = [
   'src/engine/renderer/RenderCommand.cpp',
   'src/engine/renderer/Texture.cpp',
   'src/engine/renderer/Renderbuffer.cpp',
+  'src/engine/renderer/Framebuffer.cpp',
   'src/engine/platform/opengl/OpenGLContext.cpp',
   'src/engine/platform/opengl/OpenGLVertexArray.cpp',
   'src/engine/platform/opengl/OpenGLBuffer.cpp',
   'src/engine/platform/opengl/OpenGLRendererAPI.cpp',
   'src/engine/platform/opengl/OpenGLTexture.cpp',
   'src/engine/platform/opengl/OpenGLRenderbuffer.cpp',
+  'src/engine/platform/opengl/OpenGLFramebuffer.cpp',
   'src/engine/platform/linux/LinuxWindow.cpp',
   'src/engine/platform/linux/LinuxInput.cpp',
 ]
