Remove unused UI classes because they are not up to date

--- a/meson.build
+++ b/meson.build
@@ -44,12 +44,12 @@ srcs = [
   'src/engine/utils/Settings.cpp',
   'src/engine/ecs/ECSEngine.cpp',
   'src/engine/ecs/Entity.cpp',
-  'src/engine/ui/TextRenderer.cpp',
-  'src/engine/ui/Anchor.cpp',
-  'src/engine/ui/Button.cpp',
-  'src/engine/ui/UI.cpp',
-  'src/engine/ui/SceneComponent.cpp',
-  'src/engine/ui/UIScene.cpp',
+  # 'src/engine/ui/TextRenderer.cpp',
+  # 'src/engine/ui/Anchor.cpp',
+  # 'src/engine/ui/Button.cpp',
+  # 'src/engine/ui/UI.cpp',
+  # 'src/engine/ui/SceneComponent.cpp',
+  # 'src/engine/ui/UIScene.cpp',
   'src/engine/Mesh.cpp',
   'src/engine/Batch.cpp',
   'src/engine/lualib.cpp',
