Refactor TextureManager to make full use of opfor's API

--- a/meson.build
+++ b/meson.build
@@ -53,6 +53,7 @@ srcs = [
   'src/engine/Mesh.cpp',
   'src/engine/Batch.cpp',
   'src/engine/lualib.cpp',
+  'src/engine/ImageLoader.cpp',
 
   'src/engine/core/Window.cpp',
   'src/engine/core/Input.cpp',
