--- a/opfor/meson.build
+++ b/opfor/meson.build
@@ -29,6 +29,7 @@ srcs = [
   # 'src/opfor/Cubemap.cpp',
   'src/opfor/Application.cpp',
   'src/opfor/layers/LayerStack.cpp',
+  'src/opfor/layers/ImGuiLayer.cpp',
   'src/opfor/utils/Settings.cpp',
   'src/opfor/ecs/ECSEngine.cpp',
   'src/opfor/ecs/Entity.cpp',
@@ -42,6 +43,7 @@ srcs = [
   'src/opfor/Batch.cpp',
   'src/opfor/lualib.cpp',
   'src/opfor/ImageLoader.cpp',
+  'src/opfor/GBuffer.cpp',
   'src/opfor/core/Window.cpp',
   'src/opfor/core/Input.cpp',
   'src/opfor/renderer/Renderer.cpp',
@@ -54,6 +56,9 @@ srcs = [
   'src/opfor/renderer/Renderbuffer.cpp',
   'src/opfor/renderer/Framebuffer.cpp',
   'src/opfor/renderer/Shader.cpp',
+  'src/opfor/renderer/SceneRenderer.cpp',
+  'src/opfor/renderer/SkyboxRenderer.cpp',
+  'src/opfor/renderer/MeshRenderer.cpp',
   'src/opfor/platform/opengl/OpenGLContext.cpp',
   'src/opfor/platform/opengl/OpenGLVertexArray.cpp',
   'src/opfor/platform/opengl/OpenGLBuffer.cpp',
