--- a/opfor/meson.build
+++ b/opfor/meson.build
@@ -24,10 +24,9 @@ incdirs += include_directories('thirdparty/glm')
 
 srcs = [
   'src/stb_image.cpp',
-  'src/opfor/Texture.cpp',
-  'src/opfor/TextureManager.cpp',
-  # 'src/opfor/Cubemap.cpp',
-  'src/opfor/Application.cpp',
+  'src/opfor/renderer/Texture.cpp',
+  'src/opfor/renderer/TextureManager.cpp',
+  'src/opfor/core/Application.cpp',
   'src/opfor/layers/LayerStack.cpp',
   'src/opfor/layers/ImGuiLayer.cpp',
   'src/opfor/utils/Settings.cpp',
@@ -39,11 +38,11 @@ srcs = [
   # 'src/opfor/ui/UI.cpp',
   # 'src/opfor/ui/SceneComponent.cpp',
   # 'src/opfor/ui/UIScene.cpp',
-  'src/opfor/Mesh.cpp',
-  'src/opfor/Batch.cpp',
+  'src/opfor/renderer/Mesh.cpp',
+  'src/opfor/renderer/Batch.cpp',
   'src/opfor/lualib.cpp',
-  'src/opfor/ImageLoader.cpp',
-  'src/opfor/GBuffer.cpp',
+  'src/opfor/core/ImageLoader.cpp',
+  'src/opfor/renderer/GBuffer.cpp',
   'src/opfor/core/Window.cpp',
   'src/opfor/core/Input.cpp',
   'src/opfor/renderer/Renderer.cpp',
