--- a/opfor-editor/imgui.ini
+++ b/opfor-editor/imgui.ini
@@ -5,56 +5,59 @@ Collapsed=0
 
 [Window][Dockspace]
 Pos=0,21
-Size=1920,1051
+Size=2560,1356
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,904
-Size=1573,168
+Pos=0,1248
+Size=2356,129
 Collapsed=0
 DockId=0x00000001,1
 
 [Window][Viewport]
-Pos=0,95
-Size=1573,807
+Pos=0,55
+Size=2356,1191
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000002,0
 
 [Window][Editor Actions]
-Pos=0,42
-Size=1573,51
+Pos=0,21
+Size=2356,32
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Materials]
-Pos=0,904
-Size=1573,168
+Pos=0,1248
+Size=2356,129
 Collapsed=0
 DockId=0x00000001,2
 
 [Window][Log]
-Pos=0,904
-Size=1573,168
+Pos=0,1248
+Size=2356,129
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Scene Hierarchy]
-Pos=1575,42
-Size=345,1030
+Pos=2358,21
+Size=202,1356
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000005,0
 
 [Window][Properties]
-Pos=60,60
-Size=111,123
+Pos=2199,309
+Size=361,1068
 Collapsed=0
+DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,42 Size=1920,1030 Split=X
-  DockNode      ID=0x00000003 Parent=0x1ED03EE2 SizeRef=1573,1038 Split=Y
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1920,860 Split=Y Selected=0x995B0CF8
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=1329,51 Selected=0x71BDE68E
-      DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=1329,807 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1920,168 Selected=0x19E69416
-  DockNode      ID=0x00000004 Parent=0x1ED03EE2 SizeRef=345,1038 Selected=0x9A68760C
+DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,21 Size=2560,1356 Split=X
+  DockNode      ID=0x00000003 Parent=0x1ED03EE2 SizeRef=2356,1038 Split=Y
+    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=1305,32 HiddenTabBar=1 Selected=0x71BDE68E
+    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=1305,1322 Split=Y Selected=0x995B0CF8
+      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1622,894 CentralNode=1 Selected=0x995B0CF8
+      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1622,129 Selected=0xB7722E25
+  DockNode      ID=0x00000004 Parent=0x1ED03EE2 SizeRef=202,1038 Split=Y Selected=0x9A68760C
+    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=345,219 Selected=0x9A68760C
+    DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=345,817 Selected=0xC89E3217
 
