editor: Update default layout

--- a/opfor-editor/imgui.ini
+++ b/opfor-editor/imgui.ini
@@ -15,8 +15,8 @@ Collapsed=0
 DockId=0x00000001,1
 
 [Window][Viewport]
-Pos=0,55
-Size=1486,894
+Pos=0,21
+Size=1486,928
 Collapsed=0
 DockId=0x00000002,0
 
@@ -40,15 +40,21 @@ DockId=0x00000001,0
 
 [Window][Scene Hierarchy]
 Pos=1488,21
-Size=432,1059
+Size=432,566
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000009,0
 
 [Window][Properties]
 Pos=2199,309
 Size=361,1068
 Collapsed=0
 DockId=0x00000008,0
+
+[Window][Inspector]
+Pos=1488,589
+Size=432,491
+Collapsed=0
+DockId=0x0000000A,0
 
 [Docking][Data]
 DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,21 Size=1920,1059 Split=X
@@ -58,6 +64,8 @@ DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,21 Size=1920,1059 Split=X
       DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1622,894 CentralNode=1 Selected=0x995B0CF8
       DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1622,129 Selected=0xB7722E25
   DockNode      ID=0x00000004 Parent=0x1ED03EE2 SizeRef=432,1038 Split=Y Selected=0x9A68760C
-    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=345,219 Selected=0x9A68760C
+    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=345,219 Split=Y Selected=0x9A68760C
+      DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=432,566 Selected=0x9A68760C
+      DockNode  ID=0x0000000A Parent=0x00000005 SizeRef=432,491 Selected=0xF02CD328
     DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=345,817 Selected=0xC89E3217
 
